--- a/src/Makefile
+++ b/src/Makefile
@@ -28,7 +28,7 @@ install: $(MAIN)
 				 mkdir -p $(DESTDIR)$(PREFIX)/bin
 				 cp -f $(MAIN) $(DESTDIR)$(PREFIX)/bin
 				 chmod 755 $(DESTDIR)$(PREFIX)/bin/$(MAIN)
-				 mkdir -p $(DESDIR)$(MANPREFIX)/man1
+				 mkdir -p $(DESTDIR)$(MANPREFIX)/man1
 				 sed "s/VERSION/$(VERSION)/g" < $(MAIN).1 > $(DESTDIR)$(MANPREFIX)/man1/$(MAIN).1
 				 chmod 644 $(DESDIR)$(MANPREFIX)/man1/$(MAIN).1
 				 @echo Please take a look in README and LICENSE files.
